--- a/views/store.ejs
+++ b/views/store.ejs
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script src="https://checkout.stripe.com/checkout.js" defer></script>
     <script>
       var stripePublicKey = "<%= stripePublicKey %>";
@@ -17,6 +21,10 @@
   </head>
   <body>
     <header class="main-header">
+      <div class="shopping-cart-icon">
+        <p id="cart-item-amount">10</p>
+        <p><i class="fa fa-shopping-cart" aria-hidden="true"></i></p>
+      </div>
       <nav class="main-nav nav">
         <ul>
           <li><a href="index.html">HOME</a></li>
