--- a/views/store.ejs
+++ b/views/store.ejs
@@ -38,7 +38,7 @@
       </p>
     </header>
     <section class="container content-section">
-      <h2 class="section-header">MUSIC</h2>
+      <h2 class="section-header">Recent Merchandise</h2>
       <div class="shop-items">
         <% items.music.forEach((item)=> { %>
         <div class="shop-item" data-item-id="<%= item.id %>">
@@ -55,7 +55,7 @@
       </div>
     </section>
     <section class="container content-section">
-      <h2 class="section-header">MERCH</h2>
+      <h2 class="section-header">All Merchandise</h2>
       <div class="shop-items">
         <% items.merch.forEach((item)=> { %>
         <div class="shop-item" data-item-id="<%= item.id %>">
