--- a/views/store.ejs
+++ b/views/store.ejs
@@ -20,6 +20,10 @@
     <script src="store.js" defer></script>
   </head>
   <body>
+    <div class="CheckoutCart">
+      <p class="CloseShoppingCartBtn">X</p>
+      <h2 style="text-align: center;">Shopping Cart</h2>
+    </div>
     <header class="main-header">
       <div class="shopping-cart-icon">
         <p id="cart-item-amount">10</p>
@@ -109,5 +113,6 @@
         </ul>
       </div>
     </footer>
+    <script src="cart_scripts.js"></script>
   </body>
 </html>
