--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,8 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 .shopping-cart-icon {
   position: fixed;
